--- a/TorboFile/View/Controls/MainViews/CleanFoldersControl.xaml
+++ b/TorboFile/View/Controls/MainViews/CleanFoldersControl.xaml
@@ -5,12 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              xmlns:prefs="clr-namespace:TorboFile.Properties"
+			 xmlns:r="clr-namespace:TorboFile.Properties"
              xmlns:convert="clr-namespace:Lemur.Windows.Converters"
              d:DesignHeight="300" d:DesignWidth="500">
     <!-- Use CleanFoldersModel -->
     <DockPanel>
         <TextBlock x:Name="LblInstructions" DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="10,10,0,12" VerticalAlignment="Top"
-				   TextWrapping="Wrap" Background="Transparent" Text="Select a folder to delete all empty sub-folders.&#xA;If recursive is checked, folders containing only other folders, or unwanted files, are also removed." />
+				   TextWrapping="Wrap" Background="Transparent" Text="{x:Static r:MainStrings.CLEAN_DIRS_MSG}" />
 
         <!-- increased bottom margin for validation message. -->
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="4,0,4,12" HorizontalAlignment="Stretch">
@@ -23,22 +24,22 @@
 
         <!-- SIZE RANGES -->
         <StackPanel DockPanel.Dock="Top" Margin="16,4,0,8">
-        <CheckBox x:Name="ChkUseSizeRange" Content="Delete files of size:" HorizontalAlignment="Left" VerticalAlignment="Top"
-                 ToolTip="Check to delete any files found within the specified size range." IsChecked="{Binding UseSizeRange}" />
+        <CheckBox x:Name="ChkUseSizeRange" Content="{x:Static r:MainStrings.CLEAN_DIRS_SIZE_OPT}" HorizontalAlignment="Left" VerticalAlignment="Top"
+                 ToolTip="{x:Static r:MainStrings.CLEAN_DIRS_SIZE_TIP}" IsChecked="{Binding UseSizeRange}" />
 
         <StackPanel x:Name="ContentSizeRange" Orientation="Horizontal" Margin="16,4,0,8"
                     Visibility="{Binding ElementName=ChkUseSizeRange, Path=IsChecked, Converter={StaticResource BoolVisibility}}">
                 <StackPanel x:Name="MinSizePanel">
 
-                    <TextBlock x:Name="LblMinSize" Text="Min Size:" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101"/>
+					<TextBlock x:Name="LblMinSize" Text="{x:Static r:MainStrings.CLEAN_DIRS_MIN_MSG}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101"/>
                     <TextBox x:Name="FldMinSize"
                          Text="{Binding MinSize, ValidatesOnExceptions=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
                          HorizontalAlignment="Left" Height="23" TextWrapping="NoWrap" VerticalAlignment="Top" Width="120" MaxLines="1" MaxLength="0" IsUndoEnabled="True" UndoLimit="3"/>
 
                 </StackPanel>
                 <StackPanel Margin="32,0,0,0">
-                
-                <TextBlock x:Name="LblMaxSize" Text="Max Size:" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101"/>
+
+					<TextBlock x:Name="LblMaxSize" Text="{x:Static r:MainStrings.CLEAN_DIRS_MAX_MSG}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101"/>
                 <TextBox x:Name="FldMaxSize"
                      Text="{Binding MaxSize, ValidatesOnExceptions=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
                      HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" MaxLines="1" />
@@ -54,15 +55,15 @@
                 <DockPanel>
                     <Image DockPanel.Dock="Top" Source="/TorboFile;component/assets/images/system-search-4.png" MaxHeight="42">
                     </Image>
-                    <TextBlock DockPanel.Dock="Bottom" Text="Begin Clean"/>
+                    <TextBlock DockPanel.Dock="Bottom" Text="{x:Static r:MainStrings.CLEAN_DIRS_BEGIN_PROMPT}"/>
                 </DockPanel>
             </Button>
             <CheckBox x:Name="ChkRecursiveEmpty" IsChecked="{Binding Source={x:Static prefs:FolderCleanSettings.Default}, Path=recursive}"
-                      ToolTip="Include all subfolders of the chosen folder in the search."
-                      Content="Recursive Clean" Margin="24,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="24" Width="193"/>
+                      ToolTip="{x:Static r:MainStrings.CLEAN_DIRS_RECURSIVE_TIP}"
+                      Content="{x:Static r:MainStrings.CLEAN_DIRS_RECURSIVE_OPT}" Margin="24,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="24" Width="193"/>
             <CheckBox x:Name="ChkDeleteEmpty" IsChecked="{Binding DeleteEmptyFiles}"
-                      ToolTip="Remove any files of Size 0. (No data within file)"
-                      Content="Remove Empty Files" HorizontalAlignment="Left" Height="24" VerticalAlignment="Center"/>
+                      ToolTip="{x:Static r:MainStrings.CLEAN_DIRS_RECURSIVE_TIP}"
+                      Content="{x:Static r:MainStrings.CLEAN_DIRS_RECURSIVE_OPT}" HorizontalAlignment="Left" Height="24" VerticalAlignment="Center"/>
         </StackPanel>
         
         <ScrollViewer DockPanel.Dock="Bottom" Margin="8,4,8,4" VerticalScrollBarVisibility="Auto">
