--- a/TorboFile/View/Controls/SearchResultsView.xaml
+++ b/TorboFile/View/Controls/SearchResultsView.xaml
@@ -7,24 +7,28 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 	<UserControl.Resources>
-		
-	<ResourceDictionary>
-		<ResourceDictionary.MergedDictionaries>
-			<ResourceDictionary Source="/TorboFile;component/assets/BaseDictionary.xaml"/>
-		</ResourceDictionary.MergedDictionaries>
-	</ResourceDictionary>
+
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/TorboFile;component/assets/BaseDictionary.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
 
 	</UserControl.Resources>
 
 	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="46*"/>
+			<RowDefinition Height="29*"/>
+		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="50*" />
 			<!--GridSplitter -->
 			<ColumnDefinition Width="4"/>
 			<ColumnDefinition Name="ColumnPreview" Width="40*" />
 		</Grid.ColumnDefinitions>
-		
-		<DockPanel Grid.Column="0" Name="GridLeftPanel">
+
+		<DockPanel Grid.Column="0" Name="GridLeftPanel" Grid.RowSpan="2">
 			<StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
 
 				<Button DockPanel.Dock="Bottom" x:Name="BtnOpen" Style="{StaticResource StdButton}"
@@ -35,7 +39,7 @@
 				</Button>
 				<Button DockPanel.Dock="Bottom" x:Name="BtnShow" Style="{StaticResource StdButton}"
                 MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Show in Explorer" Command="{Binding CmdShowExternal}"
+                ToolTip="Show in Explorer" Command="{Binding CmdShowLocation}"
                 VerticalAlignment="Bottom" HorizontalAlignment="Right">
 					<Image Source="/TorboFile;component/assets/images/large/folder.png" MaxHeight="28" MaxWidth="28"  />
 				</Button>
@@ -68,15 +72,15 @@
 
 		</DockPanel>
 
-		<GridSplitter Grid.Column="1" Width="4" Opacity="0" HorizontalAlignment="Center" VerticalAlignment="Stretch" />
+		<GridSplitter Grid.Column="1" Width="4" Opacity="0" HorizontalAlignment="Center" VerticalAlignment="Stretch" Grid.RowSpan="2" />
 
 		<!-- PREVIEW PANE -->
-		<ContentControl x:Name="SelectionPreview" Grid.Column="2" Margin="4,4,4,4" VerticalAlignment="Center"
+		<ContentControl x:Name="SelectionPreview" Grid.Column="2" Margin="4,30" VerticalAlignment="Center"
                     HorizontalAlignment="Center"  HorizontalContentAlignment="Center"
                     Visibility="{Binding Path=FilePath, Converter={StaticResource NonNullToVisible}}"
                     DataContext="{Binding Path=DataContext.FilePreview, RelativeSource={RelativeSource AncestorType=Control, Mode=FindAncestor}}"
-                    Style="{StaticResource PreviewSelector}"/>
-		
+                    Style="{StaticResource PreviewSelector}" Grid.RowSpan="2"/>
+
 	</Grid>
 
 </UserControl>
