--- a/TorboFile/View/Controls/FileList.xaml
+++ b/TorboFile/View/Controls/FileList.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TorboFile.View.Controls"
-             mc:Ignorable="d" 
+			 xmlns:controls="clr-namespace:Lemur.Windows.Controls"
+			 mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 	
-	<!-- Attempt to replace FileSelectionView with a more versatile control. -->
+	<!-- Replaces FileSelectionView with a more versatile control. -->
 	<!-- Use FileListVM (or make this a template? ) -->
 
 	<DockPanel>
@@ -37,17 +38,31 @@
                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectedItem="{Binding SelectedItem}">
 
 			<ListView.View>
-				<GridView AllowsColumnReorder="True">
-					<GridViewColumn Width="Auto">
+				<controls:LMGridView AllowsColumnReorder="True" AutoColumnMenu="True">
+					<GridViewColumn Width="Auto" controls:LMGridView.ColumnName="chkColumn"
+									controls:LMGridView.Visible="{Binding ShowCheckBox}">
 						<GridViewColumn.CellTemplate>
 							<DataTemplate>
 								<CheckBox IsChecked="{Binding Path=IsChecked}"></CheckBox>
 							</DataTemplate>
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
-					<GridViewColumn DisplayMemberBinding="{Binding Item.FullName}" Header="File" Width="Auto"></GridViewColumn>
-					<GridViewColumn DisplayMemberBinding="{Binding Item.Length, Converter={StaticResource SizeToString}}" Header="Size" Width="Auto"></GridViewColumn>
-				</GridView>
+					<GridViewColumn DisplayMemberBinding="{Binding Item.FullName}"
+									controls:LMGridView.Visible="{Binding ShowPath}"
+									Header="File" Width="Auto"></GridViewColumn>
+					<GridViewColumn DisplayMemberBinding="{Binding Item.Length, Converter={StaticResource SizeToString}}"
+									controls:LMGridView.Visible="{Binding ShowSize}"
+									Header="Size" Width="Auto"></GridViewColumn>
+					<GridViewColumn DisplayMemberBinding="{Binding Item.Length}"
+									controls:LMGridView.Visible="{Binding ShowCreateTime, StringFormat=dd-MM-yyyy }"
+									Header="Creation Date" Width="Auto"></GridViewColumn>
+					<GridViewColumn DisplayMemberBinding="{Binding Item.LastAccessTime}"
+									controls:LMGridView.Visible="{Binding ShowModifyTime, StringFormat=dd-MM-yyyy }"
+									Header="Modified Date" Width="Auto"></GridViewColumn>
+					<GridViewColumn DisplayMemberBinding="{Binding Item.Extension}"
+									controls:LMGridView.Visible="{Binding ShowExtension}"
+									Header="Extension" Width="Auto"></GridViewColumn>
+				</controls:LMGridView>
 			</ListView.View>
 		</ListView>
 
