--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -234,7 +234,29 @@
 							<ContentPresenter.ContentTemplate>
 								<DataTemplate>
 
-									<controls:FileSelectionView  Visibility="{Binding Converter={StaticResource NonNullToVisible}}" />
+									<controls:FileList Visibility="{Binding Converter={StaticResource NonNullToVisible}}">
+										<controls:FileList.Buttons>
+
+											<Button DockPanel.Dock="Bottom" Style="{StaticResource StdButton}"
+                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
+                ToolTip="Open in Explorer" Command="{Binding CmdOpenChecked}" Visibility="{Binding ShowOpenCmd, Converter={StaticResource BoolVisibility}}"
+                VerticalAlignment="Bottom" HorizontalAlignment="Right">
+													<Image Source="/TorboFile;component/assets/images/document-preview.png" MaxHeight="28" MaxWidth="28" />
+												</Button>
+												<Button DockPanel.Dock="Bottom" Style="{StaticResource StdButton}"
+                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
+                ToolTip="Show in Explorer" Command="{Binding CmdShowLocation}" Visibility="{Binding ShowOpenLocationCmd, Converter={StaticResource BoolVisibility}}"
+                VerticalAlignment="Bottom" HorizontalAlignment="Right">
+													<Image Source="/TorboFile;component/assets/images/large/folder.png" MaxHeight="28" MaxWidth="28"  />
+												</Button>
+												<Button DockPanel.Dock="Bottom" Style="{StaticResource StdButton}"
+                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
+                ToolTip="Delete Selected" Command="{Binding CmdDelete}" Visibility="{Binding ShowDeleteCmd, Converter={StaticResource BoolVisibility}}"
+                VerticalAlignment="Bottom" HorizontalAlignment="Right">
+													<Image Source="/TorboFile;component/assets/images/dialog-close.png" MaxHeight="28" MaxWidth="28" />
+												</Button>
+										</controls:FileList.Buttons>
+									</controls:FileList>
 
 								</DataTemplate>
 							</ContentPresenter.ContentTemplate>
